[package]
name = "olive_script"
version = "0.1.0"
authors = ["Ian Rehwinkel <ian.rehwinkel@tutanota.com>"]
edition = "2018"

[[bin]]
name = "olv"
path = "src/main_interpreter.rs"

[[bin]]
name = "olvc"
path = "src/main_compiler.rs"

[lib]
name = "olv"
path = "src/lib.rs"

[dependencies]
indexmap = "1.3.2"
libloading = "0.5.2"