[package]
name = "olivescript"
version = "0.2.0"
authors = ["Ian Rehwinkel <ian.rehwinkel@tutanota.com>"]
edition = "2018"

[workspace]
members = ["native/olvmath", "native/olvweb", "oliveparser"]

[[bin]]
name = "olv"
path = "src/main.rs"

# [lib]
# name = "olvnative"
# path = "src/lib.rs"

[dependencies]
oliveparser = { path = "oliveparser/" }
clap = "2.33.1"
bincode = "1.2.1"
serde = "1.0.110"
mistake = "0.1.1"
colored = "1.9.3"